--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -29,10 +29,5 @@ spec:
               port: 3000
             initialDelaySeconds: 30
             periodSeconds: 10
-          resources:
-            requests:
-              cpu: "100m"
-              memory: "128Mi"
-            limits:
-              cpu: "200m"
-              memory: "256Mi"
+      imagePullSecrets:
+        - name: ghcr-secret
