--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,13 +21,17 @@ spec:
             httpGet:
               path: /
               port: 3000
-            initialDelaySeconds: 5
-            periodSeconds: 5
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 3000
-            initialDelaySeconds: 30
+            initialDelaySeconds: 15 
             periodSeconds: 10
+            timeoutSeconds: 5
+
+            livenessProbe:
+              httpGet:
+                path: /
+                port: 3000
+              initialDelaySeconds: 60   
+              periodSeconds: 15
+              timeoutSeconds: 5
+              failureThreshold: 3
       imagePullSecrets:
         - name: ghcr-secret
